--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,23 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-
+    <aside class="sidepanel">
+        <a href="" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="Facebook"></a>
+        <a href="" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="Instagram"></a>
+        <a href="" class="sidepanel__link"><img src="icons/social/github.svg" alt="Github"></a>
+        <div class="sidepanel__line"></div>
+        <div class="sidepanel__text"><span>Социальные сети</span></div>
+    </aside>
+    <section class="promo">
+        <div class="container">
+            <div class="subtitle promo__subtitle">Меня зовут Александра Смит</div>
+            <h1 class="promo__title">Я web-разработчик <br> из города Москва</h1>
+            <div class="promo__btns">
+                <a href="#" class="promo__link button">Портфолио</a>
+                <a href="#" class="promo__link">Про меня</a>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
