--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,39 @@
             </div>
         </div>
     </section>
+
+    <section class="introduce">
+        <div class="container">
+            <div class="introduce__wrapper">
+                <img src="img/main_photo.jpg" alt="me" class="introduce__photo">
+                <div class="introduce__descr">
+                    <div class="subtitle introduce__subtitle">Про меня</div>
+                    <h2 class="title introduce__title">Меня зовут Александра</h2>
+                    <div class="introduce__line"></div>
+                    <div class="introduce__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
+                </div>
+                <div class="introduce__skills">
+                    <div class="introduce__items">
+                        <div class="introduce-item">
+                            <img src="icons/about_me/web_development.svg" alt="1" class="introduce-item__icon">
+                            <div class="subtitle subtitle_fs14">Web-разработка</div>
+                            <div class="introduce-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                        </div>
+                        <div class="introduce-item">
+                            <img src="icons/about_me/mobile_dev.svg" alt="2" class="introduce-item__icon">
+                            <div class="subtitle subtitle_fs14">Разработка приложений</div>
+                            <div class="introduce-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                        </div>
+                        <div class="introduce-item">
+                            <img src="icons/about_me/design.svg" alt="3" class="introduce-item__icon">
+                            <div class="subtitle subtitle_fs14">UI/UX Design</div>
+                            <div class="introduce-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
