--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
                 <div class="introduce__descr">
                     <div class="subtitle introduce__subtitle">Про меня</div>
                     <h2 class="title introduce__title">Меня зовут Александра</h2>
-                    <div class="line"></div>
+                    <div class="line line_intro"></div>
                     <div class="introduce__text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p></div>
                 </div>
                 <div class="introduce__skills">
@@ -145,6 +145,87 @@
             </div>
         </div>
     </section>
+
+
+    <section class="resume">
+        <div class="container">
+            <div class="subtitle resume__subtitle">Опыт</div>
+            <h2 class="title resume__title">Чем я буду полезна</h2>
+            <div class="line"></div>
+            <div class="resume__wrapper">
+                <div class="resume__column">
+                    <h3 class="subtitle subtitle_fs20 resume__column-title">Образование</h3>
+                    <ul>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experience/university.svg" alt="university">
+                                    </div>
+                                    <h4 class="subtitle subtitle_fs14">МГТУ им. Н. Э. Баумана</h4>
+                                    <div class="resume__item-info">Диплом магистра | Москва (2014-2020)</div>
+                                </div>
+                                <div class="resume__item-descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experience/courses.svg" alt="university">
+                                    </div>
+                                    <h4 class="subtitle subtitle_fs14">Udemy</h4>
+                                    <div class="resume__item-info">Курсы по Web-разработке </div>
+                                </div>
+                                <div class="resume__item-descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="resume__column">
+                    <h3 class="subtitle subtitle_fs20 resume__column-title">Опыт работы</h3>
+                    <ul>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experience/developer.svg" alt="university">
+                                    </div>
+                                    <h4 class="subtitle subtitle_fs14">Front-End Developer</h4>
+                                    <div class="resume__item-info">EPAM | Москва (2018-2019)</div>
+                                </div>
+                                <div class="resume__item-descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experience/designer.svg" alt="university">
+                                    </div>
+                                    <h4 class="subtitle subtitle_fs14">UI/UX Designer</h4>
+                                    <div class="resume__item-info">Squad Team | Москва (2018)</div>
+                                </div>
+                                <div class="resume__item-descr">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
     <script src="js/script.js"></script>
 </body>
 </html>
