--- a/src/index.html
+++ b/src/index.html
@@ -118,8 +118,8 @@
             <div class="introduce__wrapper">
                 <img src="img/main_photo.jpg" alt="me" class="introduce__photo">
                 <div class="introduce__descr">
-                    <div class="subtitle introduce__subtitle">Про меня</div>
-                    <h2 class="title introduce__title">Меня зовут Александра</h2>
+                    <h2 class="subtitle introduce__subtitle">Про меня</h2>
+                    <div class="title introduce__title">Меня зовут Александра</div>
                     <div class="line line_intro"></div>
                     <div class="introduce__text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p></div>
                 </div>
@@ -149,8 +149,8 @@
 
     <section class="resume">
         <div class="container">
-            <div class="subtitle resume__subtitle">Опыт</div>
-            <h2 class="title resume__title">Чем я буду полезна</h2>
+            <h2 class="subtitle resume__subtitle">Опыт</h2>
+            <div class="title resume__title">Чем я буду полезна</div>
             <div class="line"></div>
             <div class="resume__wrapper">
                 <div class="resume__column">
@@ -225,7 +225,106 @@
         </div>
     </section>
 
-
+    <section class="skills">
+        <div class="container">
+            <h2 class="subtitle skills__subtitle">Навыки</h2>
+            <div class="title skills__title">Что я использую в работе</div>
+            <div class="line"></div>
+            <div class="skills__wrapper">
+                <div class="skills__item">
+                    <div class="skills__item-logo">
+                        <img src="icons/skills/html5.svg" alt="html">
+                    </div>
+                    <div class="skills__item-technology">HTML5</div>
+                    <div class="skills__item-descr">Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-logo">
+                        <img src="icons/skills/css3.svg" alt="css">
+                    </div>
+                    <div class="skills__item-technology">CSS3</div>
+                    <div class="skills__item-descr">Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-logo">
+                        <img src="icons/skills/js.svg" alt="js">
+                    </div>
+                    <div class="skills__item-technology">Java Script</div>
+                    <div class="skills__item-descr">Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое</div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-logo">
+                        <img src="icons/skills/jquery.svg" alt="Jquery">
+                    </div>
+                    <div class="skills__item-technology skills__item-technology_mt48">Jquery</div>
+                    <div class="skills__item-descr">Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует</div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-logo">
+                        <img src="icons/skills/react.svg" alt="react">
+                    </div>
+                    <div class="skills__item-technology">React</div>
+                    <div class="skills__item-descr">Эта библиотека позволяет <br> создавать web-приложения. Мы можем создать максимально интерактивный продукт именно <br> под ваши цели</div>
+                </div>
+            </div>
+            <div class="skills__scales">
+                <div class="skills__scale">
+                    <div class="skills__scale-header">
+                        <div class="subtitle subtilte_fs14 skills__scale-subtitle">Создание сайтов</div>
+                        <div class="skills__scale-percent">80%</div>
+                    </div>
+                    <div class="skills__scale-line">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="skills__scale">
+                    <div class="skills__scale-header">
+                        <div class="subtitle subtilte_fs14 skills__scale-subtitle">Работа с данными</div>
+                        <div class="skills__scale-percent">60%</div>
+                    </div>
+                    <div class="skills__scale-line">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="skills__scale">
+                    <div class="skills__scale-header">
+                        <div class="subtitle subtilte_fs14 skills__scale-subtitle">Креативность</div>
+                        <div class="skills__scale-percent">80%</div>
+                    </div>
+                    <div class="skills__scale-line">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="skills__scale">
+                    <div class="skills__scale-header">
+                        <div class="subtitle subtilte_fs14 skills__scale-subtitle">Понимание скриптов</div>
+                        <div class="skills__scale-percent">10%</div>
+                    </div>
+                    <div class="skills__scale-line">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="skills__scale">
+                    <div class="skills__scale-header">
+                        <div class="subtitle subtilte_fs14 skills__scale-subtitle">Soft skills</div>
+                        <div class="skills__scale-percent">80%</div>
+                    </div>
+                    <div class="skills__scale-line">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="skills__scale">
+                    <div class="skills__scale-header">
+                        <div class="subtitle subtilte_fs14 skills__scale-subtitle">Создание приложений</div>
+                        <div class="skills__scale-percent">0%</div>
+                    </div>
+                    <div class="skills__scale-line">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
