section works,section location,some fixes to title code

--- a/src/index.html
+++ b/src/index.html
@@ -149,8 +149,8 @@
 
     <section class="resume">
         <div class="container">
-            <h2 class="subtitle resume__subtitle">Опыт</h2>
-            <div class="title resume__title">Чем я буду полезна</div>
+            <h2 class="subtitle section__subtitle">Опыт</h2>
+            <div class="title section__title">Чем я буду полезна</div>
             <div class="line"></div>
             <div class="resume__wrapper">
                 <div class="resume__column">
@@ -227,8 +227,8 @@
 
     <section class="skills">
         <div class="container">
-            <h2 class="subtitle skills__subtitle">Навыки</h2>
-            <div class="title skills__title">Что я использую в работе</div>
+            <h2 class="subtitle section__subtitle">Навыки</h2>
+            <div class="title section__title">Что я использую в работе</div>
             <div class="line"></div>
             <div class="skills__wrapper">
                 <div class="skills__item">
@@ -324,6 +324,30 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="works">
+        <div class="container">
+            <h2 class="subtitle section__subtitle">Портфолио</h2>
+            <div class="title section__title">Мои работы</div>
+            <div class="line"></div>
+            <div class="works__wrapper">
+                <a href="#" class="works__item"><img src="img/works/uber.jpg" alt="uber"></a>
+                <a href="#" class="works__item"><img src="img/works/pulse.jpg" alt="pulse"></a>
+                <a href="#" class="works__item"><img src="img/works/bread.jpg" alt="bread"></a>
+                <a href="#" class="works__item vertical"><img src="img/works/plans.jpg" alt="plans"></a>
+                <a href="#" class="works__item"><img src="img/works/ipad.jpg" alt="mac"></a>
+                <a href="#" class="works__item horizontal"><img src="img/works/mac.jpg" alt="mac"></a>
+            </div>
+        </div>
+    </section>
+
+    <section class="location">
+        <div class="container">
+            <h2 class="subtitle section__subtitle">Местоположение</h2>
+            <div class="title section__title">Город Санкт-Петербург<br>Улица Ленская дом 19к1</div>
+            <div class="line"></div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5446632604298!2d30.494155916276664!3d59.939697481876564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962de709733623%3A0xd0f908dc87800a6e!2z0JvQtdC90YHQutCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTk1Mjk4!5e0!3m2!1sru!2sru!4v1655488339790!5m2!1sru!2sru"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
     <script src="js/script.js"></script>
 </body>
