--- a/src/index.html
+++ b/src/index.html
@@ -349,6 +349,46 @@
             <div class="line"></div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5446632604298!2d30.494155916276664!3d59.939697481876564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962de709733623%3A0xd0f908dc87800a6e!2z0JvQtdC90YHQutCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTk1Mjk4!5e0!3m2!1sru!2sru!4v1655488339790!5m2!1sru!2sru"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
+
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__wrapper">
+                <div class="contacts__photo">
+                    <img src="img/main_photo.jpg" alt="myself">
+                </div>
+                <div class="contacts__content">
+                    <h2 class="subtitle contacts__subtitle">Контакты</h2>
+                    <div class="title contacts__title">Свяжитесь со мной</div>
+                    <div class="line line_intro"></div>
+                    <div class="subtitle subtitle_fs14 contacts__descr">Любым удобным для вас способом:</div>
+                    <div class="contacts__social">
+                        <a href="#" class="contacts__link"><img src="icons/social/vk.svg" alt="vk"></a>
+                        <a href="#" class="contacts__link"><img src="icons/social/telegram.svg" alt="telegram"></a>
+                        <a href="#" class="contacts__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
+                    </div>
+                    <div class="subtitle subtitle_fs14 contacts__descr">Или оставьте ваши данные и я сама вам напишу:</div>
+
+                    <form action="#" class="contacts__form">
+                        <div class="contacts__input">
+                            <input name="name" id="name" type="text">
+                            <label for="name">Ваше имя</label>
+                        </div>
+                        <div class="contacts__input">
+                            <input name="email" id="email" type="email">
+                            <label for="email">Ваша почта</label>
+                        </div>
+                        <div class="contacts__textarea">
+                            <textarea name="text" id="text"></textarea>
+                            <label for="text">Ваше сообщение</label>
+                        </div>
+                        <div>
+                            <button class="contacts__submit button">Отправить сообщение</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
