--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,6 @@
                     <div class="line line_intro"></div>
                     <div class="introduce__text"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p></div>
                 </div>
-                <div class="introduce__skills">
                     <div class="introduce__items">
                         <div class="introduce-item">
                             <img src="icons/about_me/web_development.svg" alt="1" class="introduce-item__icon">
@@ -141,13 +140,12 @@
                             <div class="introduce-item__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </section>
 
 
-    <section class="resume">
+    <!-- <section class="resume">
         <div class="container">
             <h2 class="subtitle section__subtitle">Опыт</h2>
             <div class="title section__title">Чем я буду полезна</div>
@@ -392,7 +390,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <script src="js/script.js"></script>
 </body>
 </html>
