--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
     </section>
 
 
-    <!-- <section class="resume">
+    <section class="resume">
         <div class="container">
             <h2 class="subtitle section__subtitle">Опыт</h2>
             <div class="title section__title">Чем я буду полезна</div>
@@ -390,7 +390,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
