--- a/src/index.html
+++ b/src/index.html
@@ -367,11 +367,11 @@
                     <div class="subtitle subtitle_fs14 contacts__descr">Или оставьте ваши данные и я сама вам напишу:</div>
 
                     <form action="#" class="contacts__form">
-                        <div class="contacts__input">
+                        <div class="contacts__input contacts__name">
                             <input required name="name" id="name" type="text">
                             <label for="name">Ваше имя</label>
                         </div>
-                        <div class="contacts__input">
+                        <div class="contacts__input contacts__email">
                             <input required name="email" id="email" type="email">
                             <label for="email">Ваша почта</label>
                         </div>
