small validate fix

--- a/src/index.html
+++ b/src/index.html
@@ -346,6 +346,7 @@
             <div class="title section__title">Город Санкт-Петербург<br>Улица Ленская дом 19к1</div>
             <div class="line"></div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5446632604298!2d30.494155916276664!3d59.939697481876564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962de709733623%3A0xd0f908dc87800a6e!2z0JvQtdC90YHQutCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTk1Mjk4!5e0!3m2!1sru!2sru!4v1655488339790!5m2!1sru!2sru"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </section>
 
     <section class="contacts">
