section works readaptive

--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,9 @@
 </head>
 <body>
     <aside class="sidepanel">
-        <a href="" class="sidepanel__link"><img src="icons/social/vk.svg" alt="Facebook"></a>
-        <a href="" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="Instagram"></a>
-        <a href="" class="sidepanel__link"><img src="icons/social/github.svg" alt="Github"></a>
+        <a href="https://vk.com/lexxxich" class="sidepanel__link"><img src="icons/social/vk.svg" alt="vk"></a>
+        <a href="https://t.me/Lexxx8s" class="sidepanel__link"><img src="icons/social/telegram.svg" alt="telegram"></a>
+        <a href="https://github.com/A1exxxM" class="sidepanel__link"><img src="icons/social/github.svg" alt="Github"></a>
         <div class="sidepanel__line"></div>
         <div class="sidepanel__text"><span>Социальные сети</span></div>
     </aside>
@@ -111,7 +111,7 @@
                 <div class="promo__technology-title subtitle">Используемый стек технологий в портфолио:</div>
                 <div class="line line_intro"></div>
                 <div class="promo__technology-descr">
-                    Проект создан на базе нативного Javascript<br>Для расположение элементов использовал display: flex и display: grid<br>Препроцессор SCSS<br>Сборщик модулей Webpack<br>Проект собран и оптимизирован с помощью gulp 
+                    Проект создан на базе нативного Javascript<br>Для расположение элементов использовал display: flex и display: grid<br>Препроцессор SCSS<br>Сборщик модулей Webpack<br>Использован планировщик задач gulp 
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
                     <h2 class="subtitle introduce__subtitle">Про меня</h2>
                     <div class="title introduce__title">Меня зовут Алексей</div>
                     <div class="line line_intro"></div>
-                    <div class="introduce__text"><p>Начал своё обучение frontend-разработке около нескольких месяцев назад. Как основной источник информации использовал курсы Ивана Петриченко на Udemy. Очень заинтересован в работе на позицию Junior/Trainee разработчика. В ближайшее время планирую активно начать изучать библиотеку React, также было бы интересно поработать с Vue.js</p></div>
+                    <div class="introduce__text"><p>Начал своё обучение frontend-разработке около нескольких месяцев назад. Как основной источник информации использовал курсы Ивана Петриченко на Udemy. Очень заинтересован в работе на позицию Junior/Trainee разработчика. На данный момент начала изучать библиотеку React, а также прорабатывать тестовые задания</p></div>
                 </div>
                     <div class="introduce__items">
                         <div class="introduce-item">
@@ -143,7 +143,7 @@
                         <div class="introduce-item">
                             <img src="icons/about_me/design.svg" alt="3" class="introduce-item__icon">
                             <div class="subtitle subtitle_fs14">Coding</div>
-                            <div class="introduce-item__descr">Основным вектором изучения сейчас является Javascript.Разбираю тестовые задания, учусь делать элементы на странице</div>
+                            <div class="introduce-item__descr">Основным вектором изучения сейчас является Javascript.Разбираю тестовые задания, изучаю React</div>
                         </div>
                     </div>
             </div>
@@ -184,7 +184,7 @@
                                     <div class="resume__item-info">Курсы по Web-разработке </div>
                                 </div>
                                 <div class="resume__item-descr">
-                                    Просмотрел около 150 часов видеоматериалов в процессе обучение , выполняя задания и наращивая свои знания. Прошёл курсы по вёрстке, а также по основам нативного JS, сейчас изучаю продвинутый JS и готовлюсь приступить к React
+                                    Просмотрел около 150 часов видеоматериалов в процессе обучения , выполняя задания и наращивая свои знания. Прошёл курсы по вёрстке, а также по основам нативного JS, сейчас изучаю продвинутый JS и работу с библиотекой React
                                 </div>
                             </div>
                         </li>
@@ -218,7 +218,7 @@
                                     <div class="resume__item-info">A1exxxM | Спб (2022)</div>
                                 </div>
                                 <div class="resume__item-descr">
-                                    Публикую свои наработки и веб-сайты на Github, имею в портфолио на данный момент 4 pet проекта и несколько решенных тестовых заданий, а также 1 коммерческий проект - сайт бренда одежды 
+                                    Публикую свои наработки и веб-сайты на Github, имею в портфолио на данный момент 4 web сайта и одно SPI на базе React, а также 1 коммерческий проект - сайт бренда одежды 
                                 </div>
                             </div>
                         </li>
@@ -305,7 +305,7 @@
                 <div class="skills__scale">
                     <div class="skills__scale-header">
                         <div class="subtitle subtilte_fs14 skills__scale-subtitle">Работа с данными</div>
-                        <div class="skills__scale-percent">60%</div>
+                        <div class="skills__scale-percent">70%</div>
                     </div>
                     <div class="skills__scale-line">
                         <span></span>
@@ -323,7 +323,7 @@
                 <div class="skills__scale">
                     <div class="skills__scale-header">
                         <div class="subtitle subtilte_fs14 skills__scale-subtitle">Понимание скриптов</div>
-                        <div class="skills__scale-percent">60%</div>
+                        <div class="skills__scale-percent">70%</div>
                     </div>
                     <div class="skills__scale-line">
                         <span></span>
@@ -341,7 +341,7 @@
                 <div class="skills__scale">
                     <div class="skills__scale-header">
                         <div class="subtitle subtilte_fs14 skills__scale-subtitle">Создание приложений</div>
-                        <div class="skills__scale-percent">20%</div>
+                        <div class="skills__scale-percent">40%</div>
                     </div>
                     <div class="skills__scale-line">
                         <span></span>
@@ -358,8 +358,8 @@
             <div class="line"></div>
             <div class="works__tabs">
                 <div class="works__tab">Pulse</div>
-                <div class="works__tab">Uber</div>
-                <div class="works__tab">Food</div>
+                <div class="works__tab">Webstudio</div>
+                <div class="works__tab">React App</div>
                 <div class="works__tab">Invi</div>
             </div>
             <div class="works__items">
@@ -367,7 +367,7 @@
                     <div class="works__item-info">
                         <div class="works__item-title">Проект "Pulse"</div>
                         <div class="line"></div>
-                        <a href="#" class="works__item-link">pulse.io</a>
+                        <a target="_blank" href="https://a1exxxm.github.io/" class="works__item-link">pulse.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/pulse.jpg" alt="pulse"></div>
                     <div class="works__item-descr">Проект собран c помощью gulp, не использован webpack и модули js. Адаптивен, изображения оптимизированы. В проекте использовал библиотеку Jquery для ознакомления с её особенностями, а также отдельную библиотеку для валидации форм и модальных окон. Не использовал css-сетку, работал с flexbox элементами. Для выполнения слайдера использовал slick slider. Препроцессор scss, БЭМ
@@ -375,32 +375,32 @@
                 </div>
                 <div class="works__item">
                     <div class="works__item-info">
-                        <div class="works__item-title">Проект "Uber"</div>
+                        <div class="works__item-title">Проект "Webstudio"</div>
                         <div class="line"></div>
-                        <a href="#" class="works__item-link">uber.io</a>
+                        <a target="_blank" href="https://a1exxxm.github.io/webstudio/" class="works__item-link">webtest.io</a>
                     </div>
-                    <div class="works__item-photo"><img src="img/works/uber.jpg" alt="uber"></div>
-                    <div class="works__item-descr">Один из первых проектов, не использованы gulp и webpack. Адаптивен. В проекте используется bootstrap и колоночная система при адаптации. Элементы расставлены с помощью flexbox. Практически отсутствует js код. Препроцессор sass, не использован БЭМ
+                    <div class="works__item-photo"><img src="img/works/website.webp" alt="webstudio"></div>
+                    <div class="works__item-descr">Использованы gulp и webpack для оптимизации проекта и его кроссбраузерности. Использовал нативный Javascript. Сделаны такие элементы , как : слайдер сотрудников, модальное окно при отправке формы, навигационное меню,сформированы карточки товаров и скрипт при наведении на них. Полностью оптмизирован и адаптивен. 
                     </div>
                 </div>
                 <div class="works__item">
                     <div class="works__item-info">
-                        <div class="works__item-title">Проект "Food"</div>
+                        <div class="works__item-title">React App</div>
                         <div class="line"></div>
-                        <a href="#" class="works__item-link">food.io</a>
+                        <a target="_blank" href="#" class="works__item-link">react.io</a>
                     </div>
-                    <div class="works__item-photo"><img src="img/works/food.jpg" alt="food"></div>
-                    <div class="works__item-descr">Проект , в котором учился работать с javascript. Вёрстка выполнена не мной, брал готовый макет для реализации только js кода. Реализованы такие элементы, как: модальные окна(их появление по времени и при скролле к концу страницы), слайдер, табы , таймер для определенной даты и калькулятор. Отсутствуют библиотеки и фреймворк
+                    <div class="works__item-photo"><img src="img/works/React-js.jpg" alt="React"></div>
+                    <div class="works__item-descr">Первый проект в стиле ToDo с использованием библиотеки React. Для стилей использован bootstrap. Работы компонентов построена на классах. Не адаптивен. 
                     </div>
                 </div>
                 <div class="works__item">
                     <div class="works__item-info">
                         <div class="works__item-title">Проект "Invi.store"</div>
                         <div class="line"></div>
-                        <a href="#" class="works__item-link">invitest.io</a>
+                        <a target="_blank" href="https://a1exxxm.github.io/invi" class="works__item-link">invi.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/invi.png" alt="invi"></div>
-                    <div class="works__item-descr">Первый коммерческий проект, который находится в процессе разработки. Первый опыт работы с дизайнером и клиентом. Минималистичный сайт на чистом js для небольшого бренда одежды. Использованы gulp и webpack для оптимизации проекта и его кроссбраузерности. Пока что не адаптивен из-за того,что desktop версия готова не полностью. Планирую реализовать модальные окна с помощью классов. Препроцессор scss, БЭМ
+                    <div class="works__item-descr">Первый коммерческий проект, который находится в процессе разработки. Первый опыт работы с дизайнером и клиентом. Минималистичный сайт на чистом js для небольшого бренда одежды. Использованы gulp и webpack для оптимизации проекта и его кроссбраузерности. Добавлен первый вариант адаптивности под мобильные устройства. Сформированы модальные окна при наведении на карточки товаров, а также и сами карточки товаров на основании данных из объекта data. Препроцессор scss, БЭМ
                     </div>
                 </div>
             </div>
@@ -420,9 +420,8 @@
                     <div class="line line_intro"></div>
                     <div class="subtitle subtitle_fs20 contacts__descr">Любым удобным для вас способом:</div>
                     <div class="contacts__social">
-                        <a href="#" class="contacts__link"><img src="icons/social/vk.svg" alt="vk"></a>
-                        <a href="#" class="contacts__link"><img src="icons/social/telegram.svg" alt="telegram"></a>
-                        <a href="#" class="contacts__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
+                        <a href="https://vk.com/lexxxich" class="contacts__link"><img src="icons/social/vk.svg" alt="vk"></a>
+                        <a href="https://t.me/Lexxx8s" class="contacts__link"><img src="icons/social/telegram.svg" alt="telegram"></a>
                     </div>
                     <div class="contacts__mail">lexxxamelnikov@gmail.com</div>
                     <div class="contacts__footer">На данный момент активно ищу работу, буду рад связаться с вами и решить тестовое задание!</div>
