--- a/src/index.html
+++ b/src/index.html
@@ -387,7 +387,7 @@
                     <div class="works__item-info">
                         <div class="works__item-title">React App</div>
                         <div class="line"></div>
-                        <a target="_blank" href="#" class="works__item-link">react.io</a>
+                        <a target="_blank" href="https://a1exxxm.github.io/react-build/" class="works__item-link">react.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/React-js.jpg" alt="React"></div>
                     <div class="works__item-descr">Первый проект в стиле ToDo с использованием библиотеки React. Для стилей использован bootstrap. Работы компонентов построена на классах. Не адаптивен. 
