--- a/src/index.html
+++ b/src/index.html
@@ -367,7 +367,7 @@
                     <div class="works__item-info">
                         <div class="works__item-title">Проект "Pulse"</div>
                         <div class="line"></div>
-                        <a target="_blank" href="https://a1exxxm.github.io/" class="works__item-link">pulse.io</a>
+                        <a target="_blank" href="https://a1exxxm.github.io/pulse" class="works__item-link">pulse.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/pulse.jpg" alt="pulse"></div>
                     <div class="works__item-descr">Проект собран c помощью gulp, не использован webpack и модули js. Адаптивен, изображения оптимизированы. В проекте использовал библиотеку Jquery для ознакомления с её особенностями, а также отдельную библиотеку для валидации форм и модальных окон. Не использовал css-сетку, работал с flexbox элементами. Для выполнения слайдера использовал slick slider. Препроцессор scss, БЭМ
@@ -377,7 +377,7 @@
                     <div class="works__item-info">
                         <div class="works__item-title">Проект "Webstudio"</div>
                         <div class="line"></div>
-                        <a target="_blank" href="https://a1exxxm.github.io/webstudio/" class="works__item-link">webtest.io</a>
+                        <a target="_blank" href="https://a1exxxm.github.io/webstudio" class="works__item-link">webtest.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/website.webp" alt="webstudio"></div>
                     <div class="works__item-descr">Использованы gulp и webpack для оптимизации проекта и его кроссбраузерности. Использовал нативный Javascript. Сделаны такие элементы , как : слайдер сотрудников, модальное окно при отправке формы, навигационное меню,сформированы карточки товаров и скрипт при наведении на них. Полностью оптмизирован и адаптивен. 
@@ -387,7 +387,7 @@
                     <div class="works__item-info">
                         <div class="works__item-title">React App</div>
                         <div class="line"></div>
-                        <a target="_blank" href="https://a1exxxm.github.io/react-build/" class="works__item-link">react.io</a>
+                        <a target="_blank" href="https://a1exxxm.github.io/react-build" class="works__item-link">react.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/React-js.jpg" alt="React"></div>
                     <div class="works__item-descr">Первый проект в стиле ToDo с использованием библиотеки React. Для стилей использован bootstrap. Работы компонентов построена на классах. Не адаптивен. 
