--- a/src/index.html
+++ b/src/index.html
@@ -254,7 +254,7 @@
                         <img src="icons/skills/js.svg" alt="js">
                     </div>
                     <div class="skills__item-technology">Java Script</div>
-                    <div class="skills__item-descr">Язык, который изучаю на данный момент.Изучил основные понятия,а также как строить такие элементы на сайтах как: слайдер,табы,калькулятор,таймер</div>
+                    <div class="skills__item-descr">Язык, который изучаю на данный момент.Изучил основные понятия и построение наиболее частых элементов,сейчас обучаюсь разработке на React</div>
                 </div>
                 <div class="skills__item">
                     <div class="skills__item-logo" id="jquery">
@@ -361,6 +361,7 @@
                 <div class="works__tab">Webstudio</div>
                 <div class="works__tab">React App</div>
                 <div class="works__tab">Invi</div>
+                <div class="works__tab">Marvel API</div>
             </div>
             <div class="works__items">
                 <div class="works__item">
@@ -401,6 +402,16 @@
                     </div>
                     <div class="works__item-photo"><img src="img/works/invi.png" alt="invi"></div>
                     <div class="works__item-descr">Первый коммерческий проект, который находится в процессе разработки. Первый опыт работы с дизайнером и клиентом. Минималистичный сайт на чистом js для небольшого бренда одежды. Использованы gulp и webpack для оптимизации проекта и его кроссбраузерности. Добавлен первый вариант адаптивности под мобильные устройства. Сформированы модальные окна при наведении на карточки товаров, а также и сами карточки товаров на основании данных из объекта data. Препроцессор scss, БЭМ
+                    </div>
+                </div>
+                <div class="works__item">
+                    <div class="works__item-info">
+                        <div class="works__item-title">Проект "Marvel API"</div>
+                        <div class="line"></div>
+                        <a target="_blank" href="https://a1exxxm.github.io/Marvel-Api-React/" class="works__item-link">marvel.io</a>
+                    </div>
+                    <div class="works__item-photo"><img src="img/works/marvel.jpeg" alt="invi"></div>
+                    <div class="works__item-descr">Второе React приложение, учился здесь работать с информацией , полученной с API . Запросы сделаны с помощью fetch . При загрузке страницы запрашивается персонаж с случайным id , а также 9 персонажей с фиксированным отступом по числу персонажей в запросе. При нажатии на кнопку load more дозагружаются персонажи дальше. При нажатии на карточку персонажа открывается информация о нём, о комиксах с его участием. В дальнейшем буду развивать это приложение, в скором времени начинаю разбирать хуки React.
                     </div>
                 </div>
             </div>
