some text fixes

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
                     <h2 class="subtitle introduce__subtitle">Про меня</h2>
                     <div class="title introduce__title">Меня зовут Алексей</div>
                     <div class="line line_intro"></div>
-                    <div class="introduce__text"><p>Начал своё обучение frontend-разработке около нескольких месяцев назад. Как основной источник информации использовал курсы Ивана Петриченко на Udemy. Очень заинтересован в работе на позицию Junior/Trainee разработчика. На данный момент начала изучать библиотеку React, а также прорабатывать тестовые задания</p></div>
+                    <div class="introduce__text"><p>Начал своё обучение frontend-разработке около нескольких месяцев назад. Как основной источник информации использовал курсы Ивана Петриченко на Udemy. Очень заинтересован в работе на позицию Junior/Trainee разработчика. На данный момент начал изучать библиотеку React, а также прорабатывать тестовые задания</p></div>
                 </div>
                     <div class="introduce__items">
                         <div class="introduce-item">
@@ -218,7 +218,7 @@
                                     <div class="resume__item-info">A1exxxM | Спб (2022)</div>
                                 </div>
                                 <div class="resume__item-descr">
-                                    Публикую свои наработки и веб-сайты на Github, имею в портфолио на данный момент 4 web сайта и одно SPI на базе React, а также 1 коммерческий проект - сайт бренда одежды 
+                                    Публикую свои наработки и веб-сайты на Github, имею в портфолио на данный момент 3 web сайта и два web приложения на базе React, а также 1 коммерческий проект - сайт бренда одежды 
                                 </div>
                             </div>
                         </li>
