--- a/src/index.html
+++ b/src/index.html
@@ -362,6 +362,7 @@
                 <div class="works__tab">React App</div>
                 <div class="works__tab">Invi</div>
                 <div class="works__tab">Marvel API</div>
+                <div class="works__tab">University</div>
             </div>
             <div class="works__items">
                 <div class="works__item">
@@ -410,8 +411,18 @@
                         <div class="line"></div>
                         <a target="_blank" href="https://a1exxxm.github.io/Marvel-Api-React/" class="works__item-link">marvel.io</a>
                     </div>
-                    <div class="works__item-photo"><img src="img/works/marvel.jpeg" alt="invi"></div>
+                    <div class="works__item-photo"><img src="img/works/marvel.jpeg" alt="marvel"></div>
                     <div class="works__item-descr">Второе React приложение, учился здесь работать с информацией , полученной с API . Запросы сделаны с помощью fetch . При загрузке страницы запрашивается персонаж с случайным id , а также 9 персонажей с фиксированным отступом по числу персонажей в запросе. При нажатии на кнопку load more дозагружаются персонажи дальше. При нажатии на карточку персонажа открывается информация о нём, о комиксах с его участием. В дальнейшем буду развивать это приложение, в скором времени начинаю разбирать хуки React.
+                    </div>
+                </div>
+                <div class="works__item">
+                    <div class="works__item-info">
+                        <div class="works__item-title">Проект "University"</div>
+                        <div class="line"></div>
+                        <a target="_blank" href="https://a1exxxm.github.io/test_23.08/" class="works__item-link">test.io</a>
+                    </div>
+                    <div class="works__item-photo"><img src="img/works/university.jpg" alt="university"></div>
+                    <div class="works__item-descr">Тестовое задание на позицию "Верстальщик". В процессе доработки, не адаптировано на данный момент, работаю на оптимизацией js кода, в планах доделать функционал модальных окон. Знакомился здесь в процессе работы с библиотекой chart.js для графиков. В секции header реализовывал модальные окна при нажатии на input, а также при нажатии на div "Выберите город". В конце страницы также присутствует слайдер с фотографиями.
                     </div>
                 </div>
             </div>
