update invi project information

--- a/src/index.html
+++ b/src/index.html
@@ -402,7 +402,8 @@
                         <a target="_blank" href="https://a1exxxm.github.io/invi" class="works__item-link">invi.io</a>
                     </div>
                     <div class="works__item-photo"><img src="img/works/invi.png" alt="invi"></div>
-                    <div class="works__item-descr">Первый коммерческий проект, который находится в процессе разработки. Первый опыт работы с дизайнером и клиентом. Минималистичный сайт на чистом js для небольшого бренда одежды. Использованы gulp и webpack для оптимизации проекта и его кроссбраузерности. Добавлен первый вариант адаптивности под мобильные устройства. Сформированы модальные окна при наведении на карточки товаров, а также и сами карточки товаров на основании данных из объекта data. Препроцессор scss, БЭМ
+                    <div class="works__item-descr">Первый коммерческий проект, который находится в процессе разработки. Первый опыт работы с дизайнером и клиентом. Минималистичный сайт на чистом js для небольшого бренда одежды. Использованы gulp и webpack для оптимизации проекта и его кроссбраузерности. Добавлен первый вариант адаптивности под мобильные устройства. Сформированы модальные окна при наведении на карточки товаров, а также и сами карточки товаров на основании данных из объекта data. Препроцессор scss, БЭМ. UPD 17.09.22: Сайт практически готов к публикации , сформирован итоговый внешний вид ,страница с политикой конфидециальности , favicon и карточки товаров.
+
                     </div>
                 </div>
                 <div class="works__item">
